<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewDetaljiArtikla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/textviewkdetaljiartikla"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/adresaSkladista"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textAdresaSkladista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="50dp"
            android:text="TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textAdresaSkladista"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:text="@string/opisSkladista"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textOpisSkladista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="50dp"
            android:text="TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textOpisSkladista"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:text="@string/nazivSkladista"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textNazivSkladista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="50dp"
            android:text="TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textNazivSkladista"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:text="@string/oznakaSkladista"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textOznakaSkladista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="50dp"
            android:text="TextView"
            android:textSize="18sp" />

    </RelativeLayout>


</LinearLayout>